// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders correctly - no book 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div />
  </body>,
  "container": <div />,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`renders correctly - with book 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="page-wrapper"
      >
        <div
          class="top-app-bar"
        >
          <button
            aria-label="open drawer"
            class="icon-btn"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
            </svg>
          </button>
        </div>
        <form
          action="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')"
          name="book-form"
        >
          <div
            class="input-wrapper"
          >
            <div
              class="container"
            >
              <input
                class="dirty"
                id="author"
                name="author"
                type="text"
                value="a"
              />
              <label
                for="author"
              >
                autore
              </label>
            </div>
            <div
              class="container"
            >
              <input
                class="dirty"
                id="title"
                name="title"
                type="text"
                value="t"
              />
              <label
                for="title"
              >
                titolo
              </label>
            </div>
            <div
              class="container"
            >
              <input
                class="dirty"
                id="location"
                name="location"
                type="text"
                value="l"
              />
              <label
                for="location"
              >
                collocazione
              </label>
            </div>
            <div
              class="container"
            >
              <input
                class="dirty"
                id="category"
                name="category"
                placeholder="cate"
                type="text"
                value="cat"
              />
              <label
                for="category"
              >
                categoria
              </label>
            </div>
            <fieldset>
              <legend>
                letto
              </legend>
              <input
                id="yes"
                name="read"
                type="radio"
                value="true"
              />
              <label
                for="yes"
              >
                sì
              </label>
              <input
                id="no"
                name="read"
                type="radio"
                value="false"
              />
              <label
                for="no"
              >
                no
              </label>
              <input
                id="do-not-know"
                name="read"
                type="radio"
                value=""
              />
              <label
                for="do-not-know"
              >
                non so
              </label>
            </fieldset>
          </div>
          <div
            class="buttons-wrapper"
          >
            <button
              class="btn"
              type="submit"
            >
              <svg
                aria-hidden="true"
                class="icon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M17 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V7zm-5 16c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3m3-10H5V5h10z"
                />
              </svg>
              salva
            </button>
            <button
              class="btn secondary"
              type="reset"
            >
              <svg
                aria-hidden="true"
                class="icon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
              reset
            </button>
          </div>
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="page-wrapper"
    >
      <div
        class="top-app-bar"
      >
        <button
          aria-label="open drawer"
          class="icon-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z"
            />
          </svg>
        </button>
      </div>
      <form
        action="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')"
        name="book-form"
      >
        <div
          class="input-wrapper"
        >
          <div
            class="container"
          >
            <input
              class="dirty"
              id="author"
              name="author"
              type="text"
              value="a"
            />
            <label
              for="author"
            >
              autore
            </label>
          </div>
          <div
            class="container"
          >
            <input
              class="dirty"
              id="title"
              name="title"
              type="text"
              value="t"
            />
            <label
              for="title"
            >
              titolo
            </label>
          </div>
          <div
            class="container"
          >
            <input
              class="dirty"
              id="location"
              name="location"
              type="text"
              value="l"
            />
            <label
              for="location"
            >
              collocazione
            </label>
          </div>
          <div
            class="container"
          >
            <input
              class="dirty"
              id="category"
              name="category"
              placeholder="cate"
              type="text"
              value="cat"
            />
            <label
              for="category"
            >
              categoria
            </label>
          </div>
          <fieldset>
            <legend>
              letto
            </legend>
            <input
              id="yes"
              name="read"
              type="radio"
              value="true"
            />
            <label
              for="yes"
            >
              sì
            </label>
            <input
              id="no"
              name="read"
              type="radio"
              value="false"
            />
            <label
              for="no"
            >
              no
            </label>
            <input
              id="do-not-know"
              name="read"
              type="radio"
              value=""
            />
            <label
              for="do-not-know"
            >
              non so
            </label>
          </fieldset>
        </div>
        <div
          class="buttons-wrapper"
        >
          <button
            class="btn"
            type="submit"
          >
            <svg
              aria-hidden="true"
              class="icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V7zm-5 16c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3m3-10H5V5h10z"
              />
            </svg>
            salva
          </button>
          <button
            class="btn secondary"
            type="reset"
          >
            <svg
              aria-hidden="true"
              class="icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
            reset
          </button>
        </div>
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
